--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,20 @@
 {
     "version": 2,
     "builds": [
-      { "src": "app.py", "use": "@vercel/python" }
+      {
+        "src": "api/index.py",
+        "use": "@vercel/python"
+      },
+      {
+        "src": "index.html",
+        "use": "@vercel/static"
+      }
     ],
     "routes": [
-      { "src": "/(.*)", "dest": "app.py" }
+      {
+        "src": "/(.*)",
+        "dest": "/api/index.py"
+      }
     ]
   }
   
